@@ -108,6 +108,7 @@ class Importer(identifier.IdentifyMixin, filing.FilingMixin):
                  csv_dialect: Union[str, csv.Dialect] = 'excel',
                  dateutil_kwds: Optional[Dict] = None,
                  narration_sep: str = '; ',
+                 encoding: Optional[str] = None,
                  **kwds):
         """Constructor.
 
@@ -127,6 +128,8 @@ class Importer(identifier.IdentifyMixin, filing.FilingMixin):
           dateutil_kwds: An optional dict defining the dateutil parser kwargs.
           narration_sep: A string, a separator to use for splitting up the payee and
             narration fields of a source field.
+          encoding: An optional encoding for the file. Typically useful for files
+            encoded in 'latin1' instead of 'utf-8' (the default).
           **kwds: Extra keyword arguments to provide to the base mixins.
         """
         assert isinstance(config, dict), "Invalid type: {}".format(config)
@@ -140,6 +143,7 @@ class Importer(identifier.IdentifyMixin, filing.FilingMixin):
         self.dateutil_kwds = dateutil_kwds
         self.csv_dialect = csv_dialect
         self.narration_sep = narration_sep
+        self.encoding = encoding
 
         self.categorizer = categorizer
 
@@ -191,7 +195,7 @@ class Importer(identifier.IdentifyMixin, filing.FilingMixin):
         iconfig, has_header = normalize_config(
             self.config, file.head(), self.csv_dialect, self.skip_lines)
 
-        reader = iter(csv.reader(open(file.name), dialect=self.csv_dialect))
+        reader = iter(csv.reader(open(file.name, encoding=self.encoding), dialect=self.csv_dialect))
 
         # Skip garbage lines
         for _ in range(self.skip_lines):
